force-app/main/default/objects/BGBL__Batch_Letter__c/BGBL__Batch_Letter__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Single and Batch letter configuration</description>
    <label>Letter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>