force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__File_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>BGBL__File_Name_Prefix__c</fullName>
    <inlineHelpText>Files attached to parent records (e.g., Contacts) will utilize this "friendly" name plus a timestamp</inlineHelpText>
    <label>File Name Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>