force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Output_Type_Short__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Output_Type_Short__c</fullName>
    <formula>IF(ispickval( BGBL__Output_Type__c ,"Acrobat (.pdf)"), "pdf","") + 
IF(ispickval( BGBL__Output_Type__c ,"Word 2003 or earlier (.doc)"), "doc","") +
IF(ispickval( BGBL__Output_Type__c ,"Word 2007 (.docx)"), "docx","")</formula>
    <label>Output Type (short)</label>
    <type>Text</type>
</CustomField>