force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Save_Batch_Letter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Save_Batch_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create and save large stitched file on server. Cannot be unchecked if also not Attaching</inlineHelpText>
    <label>Save Large Batch File</label>
    <type>Checkbox</type>
</CustomField>